--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -30,6 +30,9 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -74,6 +77,11 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-compiler-plugin</artifactId>
+
+</plugin>
 		</plugins>
 	</build>
 
