--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
 <plugin>
 <groupId>org.springframework.boot</groupId>
 <artifactId>spring-boot-maven-plugin</artifactId>
+    </plugin>
 <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
