--- a/pom.xml
+++ b/pom.xml
@@ -68,17 +68,13 @@
 <plugin>
 <groupId>org.springframework.boot</groupId>
 <artifactId>spring-boot-maven-plugin</artifactId>
-    </plugin>
+</plugin>
+
 <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-<!--                     <fork>true</fork>
-                    <executable>C:\Program Files\Java\jdk1.7.0_79\bin\javac</executable> -->
-                </configuration>
-            </plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-compiler-plugin</artifactId>
+
+</plugin>
 
 </plugins>
 </build>
